<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">ExcuseMe</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit Me</string>
    
    
    
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <string-array name="age_array">
        <item>Under 18</item>
        <item>18 ~ 23</item>
        <item>24 ~ 35</item>
        <item>35 ~ 49</item>
        <item>Over 50</item>
    </string-array>
    
    <string-array name="relationship_array">
        <item>Single</item>
        <item>In a Relationship</item>
        <item>It\'s Complicated</item>
        <item>Married</item>
        <item>Widowed</item>    
    </string-array>
    
    <string-array name="personality_array">
        <item>Easy Going</item>
        <item>Leader</item>
        <item>Silly</item>
        <item>Shy</item>
        <item>Nerdy</item>    
    </string-array>
    
    <string-array name="ethnicity_array">
        <item>Caucasian</item>
        <item>African American</item>
        <item>Asian</item>
        <item>Hispanic</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="location_array">
        <item>North East  ~ City</item>
        <item>North East ~ Suburb</item>
        <item>North East ~ Rural</item>
        <item>Midwest ~ City</item>
        <item>Midwest ~ Suburb</item>
        <item>Midwest ~ Rural</item>
        <item>South ~ City</item>
        <item>South ~ Suburb</item>
        <item>South ~ Rural</item>
        <item>West ~ City</item>
        <item>West ~ Suburb</item>
        <item>West ~ Rural</item>       
    </string-array>

    
    <string-array name="income_array">
        <item>Under $15000</item>
        <item>$15000 - $30000</item>
        <item>$30000 - $45000</item>
        <item>$45000 - $65000</item>
        <item>$65000 - $80000</item>
        <item>$80000 - $100000</item>
        <item>$100000 - $150000</item>
        <item>Above $150000</item>
    </string-array>
    
    <string-array name="brother_array">
        <item>I have no brothers</item>
        <item>I have brothers</item>
    </string-array>
    
    <string-array name="sister_array">
        <item>I have no Sisters</item>
        <item>I have sisters</item>
    </string-array>
    
    <string-array name="parents_array">
        <item>I live with my parents</item>
        <item>I own a house or apartment</item>
    </string-array>
    

</resources>
