<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/excuse_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/firstNameGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastNameReg"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:text="@string/firstName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lastNameReg"
        android:layout_alignRight="@+id/firstNameGet"
        android:text="@string/lastName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordReg"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordReg"
        android:layout_alignRight="@+id/textView4"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/firstNameGet"
        android:text="Create Account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstNameGet"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginBottom="20dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/usernameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/firstNameGet"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/firstNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageView"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/firstNameGet"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailReg"
        android:layout_below="@+id/emailReg"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/lastNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameReg"
        android:layout_below="@+id/firstNameReg"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/submit" />

</RelativeLayout>
